Use Hydra OAuth for logging in to the api (#130)
* Use Hydra OAuth for logging in to the api

* Add all necessary files

* Address comments

* Fix webview flickering and login error handling

* Clean up login web page redirects

* Add revoking consent sessions to ban updates

* Let lombok do the lifting

* Use correct revoke endpoint

* Remove moderation scope